# daredata_assignment_v2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: meargeble.yml
.github/workflows/: test.yml
life_expectancy/: __init__.py  cleaning.py  enums.py  readers.py
life_expectancy/life_expectancy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
life_expectancy/tests/: __init__.py  conftest.py  test_cleaning.py  test_enums.py  test_pyproject.py  test_readers.py
