[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name            = "life_expectancy"
version         = "0.1.0"
readme          = "README.md"
requires-python = ">=3.8"
description     = "First assignment of the Foundations Learning Path"
authors         = [
    { name = "Nuno Pires<nynor@nfpires.com>" },
    { name = "Fernando Cordeiro<fernando@daredata.engineering>" }
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov",
    "toml",
    "pandas"
    ]

# [tool.coverage.run]
# omit = [
#     "*/conftest.py", "*/test*", # omit test files
# ]

[tool.setuptools.packages.find]
where           = ["life_expectancy"]

[tool.coverage.report]
fail_under = 95